[package]
name = "first_assault_cube"
description = "Wakeland's first Rust cheat. Started on November 1st, 2024"
version = "0.1.0"
edition = "2021"

[dependencies]
memlib = "0.1.1"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
linkme = "0.3.29"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug"] }